@@ -51,7 +51,7 @@
 				AdditionalOptions="/EHsc "
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\include\msvc&quot;;..;..\..\src;..\..\src\formats;..\..\data;..\..\src\formats\xml;..\..\src\gui;..\..\include;$(NOINHERIT)"
-				PreprocessorDefinitions="WIN32;_DEBUG;__WXMSW__;__WXDEBUG__;_WINDOWS;wxUSE_NO_MANIFEST"
+				PreprocessorDefinitions="WIN32;_DEBUG;__WXMSW__;__WXDEBUG__;_WINDOWS;wxUSE_NO_MANIFEST;USING_DYNAMIC_LIBS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -161,7 +161,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\include\msvc&quot;;..;..\..\src;..\..\src\formats;..\..\data;..\..\src\formats\xml;..\..\src\gui;.\..\..\include;$(NOINHERIT)"
-				PreprocessorDefinitions="WIN32;__WXMSW__;_WINDOWS;NOPCH;wxUSE_NO_MANIFEST"
+				PreprocessorDefinitions="WIN32;__WXMSW__;_WINDOWS;NOPCH;wxUSE_NO_MANIFEST;USING_DYNAMIC_LIBS"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
